plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'io.freefair.lombok' version '6.5.0.3'
}

group = 'com.toedter'
version = '2.0.0-SNAPSHOT'
sourceCompatibility = '1.17'

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/snapshot' }
    maven { url 'https://repo.spring.io/milestone' }
// if you want to use a snapshot version from oss.sonatype.org
//    maven {
//        url 'https://oss.sonatype.org/content/repositories/snapshots/'
//    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'javax.validation:validation-api:2.0.1.Final'

    // if you want to use the released version, use
    // implementation 'com.toedter:spring-hateoas-jsonapi:1.6.0'
    implementation project(':lib')

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }

    // runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.hsqldb:hsqldb'
}

test {
    useJUnitPlatform()
}

bootJar {
    archivesBaseName = "spring-hateoas-jsonapi-example"
}
